# oncoreason

./: .gitignore  LICENSING.md  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
docs/: DATA_HANDLING.md  MTBBENCH_INTEGRATION.md
notebooks/: kernel-metadata.json  phase0_gate1_smoke_test.ipynb
phases/: PHASE0_preflight_gates.md  PHASE1_connectors.md  PHASE2_case_set.md  PHASE3_scaffolding.md  PHASE4_supervision.md  PHASE5_posttraining.md  PHASE6_evaluation.md  PHASE7_packaging.md  README.md
publications/: REFERENCES.md
qc/: 20260718-2203-cbio-qc.json  20260718-2203-cbio-qc.md  INDEX.tsv
results/: 20260719-1650-pipeline.json  20260719-1654-pipeline.json  20260719-1931-pipeline.json  20260719-1946-pipeline.json  20260719-2003-pipeline.json  20260719-2005-pipeline.json  20260719-2030-pipeline.json  INDEX.tsv
runs/: 20260718-1859-v5-3b-cached-cases.txt  20260718-1859-v5-3b-cached.md  20260718-1903-v6-3b-cachetest-cases.txt  20260718-1903-v6-3b-cachetest.md  20260720-0833-b-n8-t08-cases.txt  20260720-0833-b-n8-t08.md  20260720-0834-b-n8-t08-cases.txt  20260720-0834-b-n8-t08.md  20260720-0842-b-n8-t08-cases.txt  20260720-0842-b-n8-t08.md  20260720-0912-b-n8-t08-cases.txt  20260720-0912-b-n8-t08.md  20260720-1535-e-hard-n8-t08-cases.txt  20260720-1535-e-hard-n8-t08.md  20260720-1537-f-2x2-semantic-cases.txt  20260720-1537-f-2x2-semantic.md  20260720-1540-f-2x2-semantic-cases.txt  20260720-1540-f-2x2-semantic.md  20260720-1604-f-2x2-semantic-cases.txt  20260720-1604-f-2x2-semantic.md  INDEX.tsv
scripts/: build_cases.py  build_sampling_notebook.py  (+16 more)
(+75 files in other folders)
